.test-duration-score - background: #ccccff; display: grid; grid-template-columns: 1fr 1fr; text-align: center; border-radius: 10px; margin: 5% 0 5% 0; .correct-card-collection, .incorrect-card-collection - background: #ccccff; border-radius: 10px; margin: 5% 0 5% 0; padding: 5%; .correct-card, .incorrect-card - background: #ffffff; padding: 2%; border-radius: 10px; margin-bottom: 2%;

--- a/styles.css
+++ b/styles.css
@@ -453,3 +453,27 @@ select:hover {
   border: 3px solid grey;
   color: black;
 }
+
+.test-duration-score {
+  background: #ccccff;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  border-radius: 10px;
+  margin: 5% 0 5% 0;
+}
+
+.correct-card-collection,
+.incorrect-card-collection {
+  background: #ccccff;
+  border-radius: 10px;
+  margin: 5% 0 5% 0;
+  padding: 5%;
+}
+
+.correct-card, .incorrect-card {
+  background: #ffffff;
+  padding: 2%;
+  border-radius: 10px;
+  margin-bottom: 2%;
+}
